Tidy up layout issues

--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -3,3 +3,8 @@
 
 // app specific component scss
 @import "components/summary-card";
+
+
+.app-plan-reference {
+  color: $govuk-secondary-text-colour;
+}
